3509 Add splash activity layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MyCloudMusicProject</string>
+    <!--版本文本-->
+    <string name="copyright">Copyright © 2019 Ixuea. All Rights Reserved</string>
 </resources>
