3516 Add guide activity button layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">MyCloudMusicProject</string>
     <!--版本文本-->
     <string name="copyright">Copyright © 2019 Ixuea. All Rights Reserved</string>
+    <!--    登录/注册-->
+    <string name="login_or_register">登录/注册</string>
 </resources>
