3545 Add guide fragement

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="copyright">Copyright © 2019 Ixuea. All Rights Reserved</string>
     <!--    登录/注册-->
     <string name="login_or_register">登录/注册</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
