--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,11 @@
     <string name="login_or_register">登录/注册</string>
     <string name="login">登录</string>
     <string name="other_login">其他登录方式</string>
-
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="register">注册</string>
     <string name="enter_username">请输入手机号/邮箱</string>
     <string name="enter_password">请输入密码</string>
     <string name="forget_password">忘记密码?</string>
+    <string name="login_success">登录成功!</string>
+
 </resources>
